src/test/deca/context/invalid/created/return/return_int_float.deca
// Description :
//    return mauvais type : float, demandé int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: (2.7) Type de retour effectif : float, déclaré : int

class A{
int met(){
return 0.5;
}
}